en el login esta sin el registrarse
y cambio de dominio de la api REST

--- a/gameTrivia/src/app/components/ventana-login/ventana-login.component.html
+++ b/gameTrivia/src/app/components/ventana-login/ventana-login.component.html
@@ -100,14 +100,14 @@
                     Ingresar
                   </button>
                 </div>
-                <div class="text-center py-2">
+                <!-- <div class="text-center py-2">
                   <p>
                     ¿No tienes una cuenta?
                     <strong (click)="onClickCambiar()" style="cursor: pointer"
                       >Registrarse</strong
                     >
                   </p>
-                </div>
+                </div> -->
               </form>
             </div>
           </div>
